Pages menu, panier, login/checkout  responsive

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
   <!-- cdns -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap-grid.css" rel="stylesheet" />
+  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap-grid.css" rel="stylesheet" /> -->
 </head>
 <body>
 <app-root></app-root>
