Initialize payment form

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
   <!-- Javascript library. Should be loaded in head section -->
   <script type="text/javascript"
           src="https://static.payzen.eu/static/js/krypton-client/V4.0/stable/kr-payment-form.min.js"
-          kr-public-key="67953007:testpublickey_5U33XRhlq7USngQP0hmpn6Kw1jVL29VucW1xOTicQZdsT">
+          kr-public-key="67953007:testpublickey_5U33XRhlq7USngQP0hmpn6Kw1jVL29VucW1xOTicQZdsT"
+          kr-clear-on-error=""
+          kr-hide-debug-toolbar="">
   </script>
 
   <!-- theme and plugins. should be loaded in the HEAD section -->
